@@ -1,5 +1,5 @@
 #coding: utf-8
 
-__version__ = '0.3.8'
+__version__ = '0.3.9'
 
 from .db import *
