@@ -1,3 +1,8 @@
+lorm 0.3.9 2017-4-26
+
+[NEW]   add "exclude" filter
+
+
 lorm 0.3.5 2017-4-25
 
 [NEW]   support transaction in autocommit mode.
@@ -17,7 +22,7 @@ lorm 0.3.0 2017-4-19
 
 lorm 0.2.23 2017-3-16
 
-[NEW]   support "not in" option
+[NEW]   support "not in" filter
         db.pet.filter(id__ni=[1,2])
 
 
